# flood-early-warning-system

./: .gitignore  README.md  basins.txt  pyproject.toml
evaluation/: eval.py  evaluation.ipynb  evalutils.py  metrics.py  plotutils.py
inundation-modeling/: flood_extend_to_depth.py  ground_truth_measurement.py  inundation_modeling.py  laplace_solver.py  manifold.py  plotutils.py  thresholding.py  utils.py
models/: autoformer.py  config.py  lstm.py  patchTST.py  tcn.py  utils.py
results/futr_exog/: lstm.parquet
results/mse/: lstm.parquet  patchtst.parquet  tcn.parquet
